feat: Implement custom camera

--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -44,7 +44,7 @@
           </div>
         </a>
 
-        <a class="card" (click)="onUpload()">
+        <a class="card" routerLink="/capture">
           <div class="card-image"
                style='--bg:url("https://lh3.googleusercontent.com/aida-public/AB6AXuDdUTwttZWcf-WuE65uyfRi2jP7UCjR36GHQKUXKlVmz8St2eT8Wf_ta0f76RylzoJIfAT91u2oelMnGtb53yuNadiBxDTGF4GQg8r5BlxkOJE0NbC7SaCDNxbyxyJPyDjsebL_l7wCt4qsE_LxhN4UKuW0SPu_IfbSDc8AfNBFZKAt0L7ogYAmmIiRc0L4wvG3ixYTlKFtKUgf9mcQD8AOXxFbv3zuOcphodzUERuhixK3WVQycD26xdQkPpB_PyatQ6_-X8hQj83f");'>
           </div>
