feat: setup initial patient profile page

--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -34,7 +34,7 @@
       </section>
 
       <section class="card-grid">
-        <a class="card" routerLink="/dashboard">
+        <a class="card" routerLink="/profile">
           <div class="card-image"
                style='--bg:url("https://lh3.googleusercontent.com/aida-public/AB6AXuDsgXBLBaHzkYN6sQL2rfIowQm06pNPvW81lCzKgnzSa9yAahCzyiorlTjEHevj8MKHZ1w6t2e7WGJG0iJClZbIAL_In5sfdqaRPc2PzyeFYFLT90-tw1HTL-TygcM7IIqBQyUi7CN5JkhBUon9OBVNZ92JZcLC4u5_VPDAdUoc_R9CsOCMI5tta_7Gwgi2SulKz2iAFXHqLqe8asLjUnrQ78EmcyWTYIW_Os2i_J8A629_M_4THe3zB6kG0H-bV0FI0hLvhiHKJTzA");'>
           </div>
