feat: Implement initial wound progress page

--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -54,7 +54,7 @@
           </div>
         </a>
 
-        <a class="card" routerLink="/compare">
+        <a class="card" routerLink="/progress">
           <div class="card-image"
                style='--bg:url("https://lh3.googleusercontent.com/aida-public/AB6AXuCIHYSWFALJSITcQI5gvdGxDKoX0VYnItgY00m0KCmlKJrZ_XcUIBG-4PIjQAxZfLbl7OZIIVFTVrkWWJb-OF5A7YFLYOW3EnwFo6dd2VnhWM9kTCmvP8VpC9HHTHjwQgvIyciFxPVKh-eykUdouhfA1y5iBlF8XN41ROI0oo4a2lCUGzzd6zZAqe-EJSu0-8R4MeDhNu9XhH1SF13EGwXw8U7pEhD6FvPflr6QPHFLEruxbapv63ICYEbAEebY1GVhVhmJOQXyZBuL");'>
           </div>
