update: Add back to home button to profile page

--- a/frontend/src/app/pages/patient-profile/patient-profile.page.html
+++ b/frontend/src/app/pages/patient-profile/patient-profile.page.html
@@ -20,14 +20,24 @@
             </button>
             <span class="ms muted">dark_mode</span>
           </div>
-  
+        
           <button class="btn primary" routerLink="/capture">
             <span class="ms">add_photo_alternate</span>
             <span>Add New Image</span>
           </button>
-  
-          <div class="avatar" style='--img:url("https://lh3.googleusercontent.com/aida-public/AB6AXuAZarvZ60ivO_BZELOcAa7RSI_HgfXoJTQGqzAqqQDAJZj_7sRfP8nhe5bgtMO3cLaEDPRyML63gTBRrXUvLxoNtN0_njmKo2e-qYDlVxX3PlVIVRPyjojOTT2QMgisVQRLvzhkc3TqwTHhHo-HKayBA7j9Wjp3CNqn7bU6G3jyCqEyoGHwIUuiNkvGnqmg9U4BroTph3Nz9e1WWxwFZrP_x6nfYNDU53g3C7F1gARn3CXew_gTfMhnBqXGS3c3qJIwk33NmWIdqpvp");'></div>
+        
+          <!-- 👇 new back button -->
+          <button class="btn ghost" routerLink="/home">
+            <span class="ms">arrow_back</span>
+            <span>Back to Home</span>
+          </button>
+        
+          <div
+            class="avatar"
+            style='--img:url("https://lh3.googleusercontent.com/aida-public/AB6AXuAZarvZ60ivO_BZELOcAa7RSI_HgfXoJTQGqzAqqQDAJZj_7sRfP8nhe5bgtMO3cLaEDPRyML63gTBRrXUvLxoNtN0_njmKo2e-qYDlVxX3PlVIVRPyjojOTT2QMgisVQRLvzhkc3TqwTHhHo-HKayBA7j9Wjp3CNqn7bU6G3jyCqEyoGHwIUuiNkvGnqmg9U4BroTph3Nz9e1WWxwFZrP_x6nfYNDU53g3C7F1gARn3CXew_gTfMhnBqXGS3c3qJIwk33NmWIdqpvp");'>
+          </div>
         </div>
+        
       </header>
   
       <!-- Greeting -->
