fix: Return delete text and add button styling

--- a/frontend/src/app/pages/wound-progress/wound-progress.page.html
+++ b/frontend/src/app/pages/wound-progress/wound-progress.page.html
@@ -54,6 +54,7 @@
                   <button class="icon-button" title="Delete photo"
                           (click)="deleteDayItem(d, $event)">
                     <ion-icon name="trash-bin" class="icon"></ion-icon>
+                    <span>Delete</span>
                   </button>
                 }
               </div>
